Fix wraping problem for forms

--- a/style.css
+++ b/style.css
@@ -92,12 +92,25 @@ html, body {
     background-color: white;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    height: 30%;
 }
 .form-title {
     font-size: 1.5rem;    
-    font-weight: 500;
+    font-weight: 600;
     font-family: var(--font-default);
     position: relative;
     left: var(--left-space);
+}
+.form{
+    position: relative;
+    left: var(--left-space);
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 100%;
+    gap: 20px;
+}
+.form-group {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 45%;
 }
